# Ra-Project

back-end/: pyproject.toml
back-end/src/: app.py  server.py
back-end/src/agents/nkanyezi_engine/: agent_engine.py  nkanyezi_system_prompts.py  nkanyezi_tools.py
back-end/src/config/: llm_config.py
