[project]
name = "back-end"
version = "0.1.0"
description = "The core backend logic for the RA Teaching Assistant Project"
authors = [
    {name = "Leroy Dickens",email = "85196627+Leroy3673@users.noreply.github.com"}
]
license = {text = "None"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
